--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -30,9 +30,9 @@
         </section>
         <section>
             Testimonials Section
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section>Contact Section</section>
     </main>
