--- a/0x00-html_advanced/8-index.html
+++ b/0x00-html_advanced/8-index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav></nav>>
+        <nav></nav>
     </header>
     <main>
         <h1>Homepage</h1>
@@ -31,9 +31,9 @@
         </section>
         <section>
             Testimonials Section
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section>Contact Section</section>
     </main>
