--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav></nav>>
+        <nav></nav>
     </header>
     <main>
         <h1>Homepage</h1>
@@ -22,18 +22,18 @@
             <article>Work #2</article>
             <article>Work #3</article>
         </section>
-        <section><h2>About us</h2>></section>
+        <section><h2>About us</h2></section>
         <section>
-            <h2>Latest news</h2>>
+            <h2>Latest news</h2>
             <article>Work #1</article>
             <article>Work #2</article>
             <article>Work #3</article>
         </section>
         <section>
-            <h2>Testimonials</h2>>
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <h2>Testimonials</h2>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section><h2>Contact</h2></section>
     </main>
