--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -53,7 +53,7 @@
         <section><h2>Contact</h2></section>
     </main>
     <footer>
-        footer
+        Footer
     </footer>
 </body>
 </html>
