--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -125,7 +125,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            footer
+            Footer
         </div>
     </footer>
 </body>
