--- a/0x00-html_advanced/8-index.html
+++ b/0x00-html_advanced/8-index.html
@@ -38,7 +38,7 @@
         <section>Contact Section</section>
     </main>
     <footer>
-        footer
+        Footer
     </footer>
 </body>
 </html>
