--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -38,7 +38,7 @@
         <section><h2>Contact</h2></section>
     </main>
     <footer>
-        footer
+        Footer
     </footer>
 </body>
 </html>
