--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -123,7 +123,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            footer
+            Footer
         </div>
     </footer>
 </body>
