--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -133,7 +133,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            footer
+            Footer
         </div>
     </footer>
 </body>
