--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -10,13 +10,21 @@
 </head>
 <body>
     <header>
-        header
+        Header
     </header>
     <main>
         Main content
     </main>
     <footer>
-        footer
+        Footer
     </footer>
+</body>
+</html>
+
+
+    <header>Header</header>
+    <main>Main content</main>
+    <footer>Footer</footer>
+
 </body>
 </html>
