--- a/0x00-html_advanced/latest_new.html
+++ b/0x00-html_advanced/latest_new.html
@@ -125,7 +125,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            footer
+            Footer
         </div>
     </footer>
 </body>
