--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -18,16 +18,16 @@
         <section><h2>Services</h2></section>
         <section>
             <h2>Works</h2>
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Work 1</article>
+            <article>Work 2</article>
+            <article>Work 3</article>
         </section>
         <section><h2>About us</h2></section>
         <section>
             <h2>Latest news</h2>
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Work 1</article>
+            <article>Work 2</article>
+            <article>Work 3</article>
         </section>
         <section>
             <h2>Testimonials</h2>
