--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -15,19 +15,23 @@
     <main>
         <h1>Homepage</h1>
         <section><h2>We help you build your brand!</h2></section>
-        <section><h2>Services</h2></section>
+        <section>
+            <h2>Services</h2>
+        </section>
         <section>
             <h2>Works</h2>
             <article>Work 1</article>
             <article>Work 2</article>
             <article>Work 3</article>
         </section>
-        <section><h2>About us</h2></section>
+        <section>
+            <h2>About Us</h2>
+        </section>
         <section>
             <h2>Latest news</h2>
-            <article>Work 1</article>
-            <article>Work 2</article>
-            <article>Work 3</article>
+            <article>Article 1</article>
+            <article>Article 2</article>
+            <article>Article 3</article>
         </section>
         <section>
             <h2>Testimonials</h2>
@@ -35,10 +39,13 @@
             <article>Testimonial 2</article>
             <article>Testimonial 3</article>
         </section>
-        <section><h2>Contact</h2></section>
+        <section>
+            <h2>Contact</h2>
+        </section>
     </main>
     <footer>
         Footer
     </footer>
+
 </body>
 </html>
