--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -54,7 +54,7 @@
         <section>
             <div>
                 <header>
-                    <h2>About us</h2>
+                    <h2>About Us</h2>
                     <p>Everything about us</p>
                 </header>
                 <div>
@@ -73,22 +73,23 @@
                     <h2>Latest news</h2>
                 </header>
                 <div>
-                    <article>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                    </article>
-                    <article>
-                        <p>Digital Life</p>
-                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-                    </article>
-                    <article>
-                        <p>Social</p>
-                        <h3>Bestiarum vero nullum iudicium puto.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-                    </article>
-                </div>
+                <article>
+                    <p>Career</p>
+                    <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </article>
+                <article>
+                    <p>Digital Life</p>
+                    <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                </article>
+                <article>
+                    <p>Social</p>
+                    <h3>Bestiarum vero nullum iudicium puto.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                </article>
             </div>
+        </div>
         </section>
         <section>
             <div>
@@ -105,9 +106,13 @@
         </section>
         <section>
             <div>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
             </div>
         </section>
     </main>
