--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -19,13 +19,13 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero Section -->
+        <!-- Hero section-->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <!-- Services Section -->
+        <!-- Services section-->
         <section>
             <div>
                 <header>
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </section>
-        <!-- Works Sections -->
+        <!-- Works sections -->
         <section>
             <div>
                 <header>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <!-- About us Section -->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <!-- Last news section -->
+        <!-- Latest news section -->
         <section>
             <div>
                 <header>
@@ -81,8 +81,9 @@
                 </header>
                 <div>
                     <article>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Career</p>
                         <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
@@ -111,7 +112,7 @@
                 </div>
             </div>
         </section>
-        <!-- Contact Section- -->
+        <!-- Contact section- -->
         <section>
             <div>
                 <h2>Contact</h2>
