--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -29,13 +29,13 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero Section -->
+        <!-- Hero section-->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <!-- Services Section -->
+        <!-- Services section-->
         <section>
             <div>
                 <header>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <!-- About us Section -->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -91,8 +91,9 @@
                 </header>
                 <div>
                     <article>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Career</p>
                         <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
