--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -29,14 +29,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero Section -->
+        <!-- Hero section-->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
                 <a href="#">Get started</a>
             </div>
         </section>
-        <!-- Services Section -->
+        <!-- Services section-->
         <section>
             <div>
                 <header>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </section>
-        <!-- About us Section -->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
