--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -21,13 +21,13 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero Section -->
+        <!-- Hero section-->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <!-- Services Section -->
+        <!-- Services section-->
         <section>
             <div>
                 <header>
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <!-- About us Section -->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
