--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -146,7 +146,7 @@
                     <a href="https://twitter.com/holbertonschool">Twitter</a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/holbertonschool/">Instagram</a>
+                    <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
                 </li>
             </ul>
         </div>
