--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -203,7 +203,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/holbertonschool/">
+                    <a href="https://www.instagram.com/holbertonschool/">
                         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                             <title>
                                 Instagram icon
