--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -13,14 +13,14 @@
     <header>
         <div>
             <div>
-                <a href="/"><span>Techium</span></a>
+            <a href="/"><span>Techium</span></a>
             </div>
             <nav>
                 <a href="/">Home</a>
                 <a href="#services">Services</a>
                 <a href="#works">Works</a>
                 <a href="#about">About</a>
-                <a href="#latst_news">Latest news</a>
+                <a href="#latest_news">Latest news</a>
                 <a href="#testimonials">Testimonials</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -29,14 +29,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero section-->
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
                 <a href="#">Get started</a>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </section>
-        <!-- Works Sections -->
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -123,13 +123,17 @@
                 </div>
             </div>
         </section>
-        <!-- Contact Section- -->
+        <!-- Contact section -->
         <section>
             <div>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                <a href="./contact.html">Get in touch</a>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
+                <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
