--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -96,7 +96,7 @@
                 <header>
                     <h2>About us</h2>
                     <p>Everything about us</p>
-                    <a href="./about.html">Learn more about us</a>
+                    <a href="about.html">Learn more about us</a>
                 </header>
                 <div>
                     <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
@@ -172,7 +172,7 @@
                 <h2>Contact</h2>
                 <p>We like to know new people</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                <a href="./contact.html">Get in touch</a>
+                <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
