--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -73,7 +73,7 @@
                 <header>
                     <h2>About us</h2>
                     <p>Everything about us</p>
-                    <a href="./about.html">Learn more about us</a>
+                    <a href="about.html">Learn more about us</a>
                 </header>
                 <div>
                     <h3>Who are we</h3>
