--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -75,7 +75,7 @@
                 <header>
                     <h2>About us</h2>
                     <p>Everything about us</p>
-                    <a href="./about.html">Learn more about us</a>
+                    <a href="about.html">Learn more about us</a>
                 </header>
                 <div>
                     <h3>Who are we</h3>
@@ -144,7 +144,7 @@
                 <h2>Contact</h2>
                 <p>We like to know new people</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                <a href="./contact.html">Get in touch</a>
+                <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
