--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -20,7 +20,7 @@
                 <a href="#services">Services</a>
                 <a href="#works">Works</a>
                 <a href="#about">About</a>
-                <a href="#latst_news">Latest news</a>
+                <a href="#latest_news">Latest news</a>
                 <a href="#testimonials">Testimonials</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -29,14 +29,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero section-->
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
                 <a href="#">Get started</a>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </section>
-        <!-- Works Sections -->
+       <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -71,7 +71,7 @@
         <section>
             <div>
                 <header>
-                    <h2>About us</h2>
+                    <h2>About Us</h2>
                     <p>Everything about us</p>
                     <a href="about.html">Learn more about us</a>
                 </header>
@@ -83,6 +83,7 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
         <!-- Last news section -->
@@ -93,8 +94,9 @@
                 </header>
                 <div>
                     <article>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Career</p>
                         <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
@@ -123,12 +125,16 @@
                 </div>
             </div>
         </section>
-        <!-- Contact Section- -->
+        <!-- Contact section -->
         <section>
             <div>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
                 <a href="contact.html">Get in touch</a>
             </div>
         </section>
