--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -31,14 +31,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero section-->
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
                 <a href="#">Get started</a>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <!-- Works Sections -->
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -73,9 +73,8 @@
         <section>
             <div>
                 <header>
-                    <h2>About us</h2>
+                    <h2>About Us</h2>
                     <p>Everything about us</p>
-                    <a href="about.html">Learn more about us</a>
                 </header>
                 <div>
                     <h3>Who are we</h3>
@@ -85,6 +84,7 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
         <!-- Last news section -->
@@ -95,8 +95,9 @@
                 </header>
                 <div>
                     <article>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Career</p>
                         <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
@@ -125,12 +126,16 @@
                 </div>
             </div>
         </section>
-        <!-- Contact Section- -->
+        <!-- Contact section -->
         <section>
             <div>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
                 <a href="contact.html">Get in touch</a>
             </div>
         </section>
