--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -9,8 +9,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header>
-    </header>
+    <header></header>
     <main>
         <section>
             <header>
@@ -30,61 +29,60 @@
             <h2>Heading with a subtitle</h2>
             <p>This is my subtitle</p>
             <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-            <!-- Lists -->
-            <section>
-                <header>
-                    <h2>Lists</h2>
-                </header>
-                    <div>
-                        <h3>Unordered</h3>
-                        <ul>
-                            <li>Dolor pulvinar etiam magna etiam.</li>
-                            <li>Sagittis adipiscing lorem eleifend.</li>
-                            <li>Felis enim feugiat dolore viverra.</li>
-                        </ul>
-                        <h3>Ordered</h3>
-                        <ol>
-                            <li>Dolor pulvinar etiam magna etiam.</li>
-                            <li>Sagittis adipiscing lorem eleifend.</li>
-                            <li>Felis enim feugiat dolore viverra.</li>
-                        </ol>
-                        <h3>Definition</h3>
-                        <dl>
-                            <dt>Definition List title</dt>
-                            <dd>Definition text.</dd>
-                            <dt>Startup</dt>
-                            <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
-                            <dt>Water</dt>
-                            <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
-                          </dl>
-                    </div>
-            </section>
         </section>
-        <!-- Horizontal rule -->
-        <section>
+         <!-- Lists -->
+         <section>
             <header>
-                <h2>Horizontal rule</h2>
+                <h2>Lists</h2>
             </header>
             <div>
-                <hr>
+                <h3>Unordered</h3>
+                <ul>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ul>
+                <h3>Ordered</h3>
+                <ol>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ol>
+                <h3>Definition</h3>
+                <dl>
+                    <dt>Definition List title</dt>
+                    <dd>Definition text.</dd>
+                    <dt>Startup</dt>
+                    <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                    <dt>Water</dt>
+                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                </dl>
             </div>
-        </section>
-        <!-- Blockquotes -->
-        <section>
-            <header>
-                <h2>Blockquotes</h2>
+         </section>
+         <!-- Horizontal rule -->
+         <section>
+             <header>
+                 <h2>Horizontal rule</h2>
             </header>
+             <div>
+                 <hr>
+            </div>
+         </section>
+         <!-- Blockquotes -->
+         <section>
+            <header><h2>Blockquotes</h2></header>
             <div>
                 <h3>Inline quote</h3>
-                <q>Stay hungry, Stay foolish</q>
+                <q>Stay hungry. Stay foolish.</q>
             </div>
             <div>
                 <h3>Blockquote</h3>
-                <blockquote>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</blockquote><cite>Kaney West, Musician</cite>
+                <blockquote>
+                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.  <cite>Kanye West, Musician</cite></p>
+                </blockquote>
             </div>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 </html>
