update task 0 and 1

--- a/0x05-form/01-article.html
+++ b/0x05-form/01-article.html
@@ -98,7 +98,11 @@
                 Vestibulum accumsan euismod nunc quis viverra.
               </p>
               <figure>
-                <img src="images/the-honest-company-j69c0Q650Hw-unsplash.jpg" alt="Glasses, baby converse shoes, black bag, wipper on a dresser with a open drawer" width="620" height="350">
+                <img
+                  src="images/the-honest-company-j69c0Q650Hw-unsplash.jpg"
+                  alt="Glasses, baby converse shoes, black bag, wipper on a dresser with a open drawer"
+                  width="620"
+                  height="350" />
                 <figcaption class="img-caption">
                   Pugnant Stoici cum Peripateticis. Prioris generis est
                   docilitas
@@ -124,7 +128,8 @@
                 Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.
               </h2>
               <p>
-                <a href="http://loripsum.net/" target="_blank" rel="noopener">Apparet statim, quae sint officia, quae actiones.</a>
+                <a href="http://loripsum.net/" target="_blank" rel="noopener">
+                  Apparet statim, quae sint officia, quae actiones.</a>
                 Quae in controversiam veniunt, de iis, si placet, disseramus.
               </p>
               <ul>
