--- a/0x0E-Cookies_local_storage/4-index.html
+++ b/0x0E-Cookies_local_storage/4-index.html
@@ -40,8 +40,8 @@
         }
 
         const deleteCookiesAndShowForm = () => {
-            document.cookie = "Firstname=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-            document.cookie = "Email=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+            Cookies.remove('Fisrtname');
+            Cookies.remove('Email');
             showForm();
         }
 
@@ -57,68 +57,19 @@
                                 </form>';
             document.querySelector('main').append(form);
             const addforme = document.getElementById('log');
-            addforme.addEventListener('submit', setCookies);
+            addforme.addEventListener('submit', function () {
+                const firstname = document.getElementById('firstname').value;
+                const email = document.getElementById('email').value;
+                Cookies.set("Firstname", firstname, { path: '' });
+                Cookies.set("Email", email, { path: '' });
+            });
         }
 
-        const equal = (string, c) => {
-            for (let i = 0; i < string.length; ++i) {
-                if (string[i] == c)
-                    return (i + 1);
-            }
-            return (0);
-        }
-
-        const getCookie = (cname) => {
-            let name = cname + '=';
-            const decodeCookie = decodeURIComponent(document.cookie);
-            const all = decodeCookie.split(';');
-            let space = all[0].split(' ');
-
-            for (let i = 0; i < space.length; ++i) {
-                if (space[i].includes(name)) {
-                    from = equal(space[i], '=');
-                    to = space[i].substring(from, space[i].length);
-                    return (to);
-                }
-            }
-            return ("");
-        }
-
-        const showfunc = () => {
-            const user = getCookie('Firstname');
-            alert('Welcome: ' + user);
-        }
-
-        const setCookies = (e) => {
-            const firstName = document.getElementById('firstname').value;
-            const email = document.getElementById('email').value;
-            // Date of expiration
-            let dateIn = new Date();
-            const days = 10;
-            dateIn.setTime(dateIn.getTime() + (days*24*60*60*1000));
-            const dateOut = `expires= ${dateIn.toUTCString()}`
-            const cookie = `${firstName} = ${email}; ${dateOut};path=/`;
-            document.cookie = cookie;
-        }
-
-        const showCookies = (e) => {
-                const p = document.createElement('p');
-                const decodeCookie = decodeURIComponent(document.cookie);
-                const allCookie = decodeCookie.split(';');
-                let cookies = '<strong>Cookies:</strong>';
-
-                for (let i = 0; i < (allCookie.length); i++)
-                    cookies += `"${allCookie[i]}"`;
-                p.innerHTML = cookies;
-                document.querySelector('main').append(p);
-            }
-
-            document.addEventListener("DOMContentLoaded", function(event) {
-                const logMeIn = document.getElementById('login').addEventListener('submit', setCookies);
-                const showTheCookies = document.getElementById('btn-show-cook').addEventListener('click', showCookies);
-            })
+        document.addEventListener("DOMContentLoaded", function(event) {
+            showWelcomeMessageOrForm();
+        });
     </script>
-    <title>Task 3</title>
+    <title>Task 4</title>
 </head>
 <body>
     <main>
